# AuxScreen

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/io/github/lamggm/auxscreen/: AppLaunchTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/lamggm/auxscreen/: AuxScreenController.kt  ConnectionPolicies.kt  EndpointPolicy.kt  MainActivity.kt  Protocol.kt
android/app/src/main/res/drawable/: ic_auxscreen.xml
android/app/src/main/res/values/: styles.xml
android/app/src/test/java/io/github/lamggm/auxscreen/: ConnectionPoliciesTest.kt  EndpointPolicyTest.kt  ProtocolTest.kt
docs/: BUILD_AND_DEPLOY.md  PLANO_DESENVOLVIMENTO.md  TESTING.md
docs/test-results/: 2026-07-18-sm-x400.md
linux/host/: Cargo.toml
linux/host/src/: cli.rs  doctor.rs  main.rs  media.rs  portal.rs  preview.rs  protocol.rs  server.rs  shutdown.rs
protocol/fixtures/: client_hello.json  client_stats.json  error.json  stream_config.json
protocol/schema/: control-v1.schema.json
scripts/: test_device.sh  validate_schema.py
