[workspace]
members = ["linux/host"]
resolver = "3"

[workspace.package]
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.97"
license = "GPL-3.0-or-later"
repository = "https://github.com/lamggm/AuxScreen"

[workspace.dependencies]
anyhow = "1.0"
ashpd = { version = "=0.13.12", default-features = false, features = ["tokio", "screencast"] }
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
gst = { package = "gstreamer", version = "0.25.3" }
gst-sdp = { package = "gstreamer-sdp", version = "0.25.3" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.25.2", features = ["v1_22"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.49.0", features = ["full"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "=5.17.0", default-features = false, features = ["tokio"] }

[patch.crates-io]
zbus = { path = "third_party/zbus-5.17.0" }
