[package]
name = "auxscreen-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux KDE/Wayland host for AuxScreen"

[dependencies]
anyhow.workspace = true
ashpd.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
gst.workspace = true
gst-sdp.workspace = true
gst-webrtc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
